--- a/draft_01_main.html
+++ b/draft_01_main.html
@@ -44,7 +44,7 @@
         <div class="content-pre-header">
             <div class="usual site-slogan">
                 <div class="usual site-slogan-text"><span>Share your events with anyone you want</span></div>
-                <div class="usual shadow-border main-eventplus-button"><img src="images/event-logo.png"></div></div>
+                <div class="usual shadow-border main-eventplus-button"><a href="/"><img src="images/event-logo.png"></a></div></div>
             <div class="usual site-slogan-signature"><span>...or explore public events</span></div>
         </div>
         <div class="content-header">
@@ -67,6 +67,7 @@
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
+                <div class="main-content-block-time"><span>2012 May 3 12:00</span></div>
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
             <div class="main-content-block usual shadow-border">
@@ -74,6 +75,7 @@
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
+                <div class="main-content-block-time"><span>2012 May 3 12:00</span></div>
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
             <div class="main-content-block usual shadow-border last-in-row">
@@ -81,6 +83,7 @@
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
+                <div class="main-content-block-time"><span>2012 May 3 12:00</span></div>
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
             <div class="main-content-block usual shadow-border">
@@ -88,6 +91,8 @@
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
+                <div class="main-content-block-time"><span>2012 May 3 12:00</span></div>
+
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
             <div class="main-content-block usual shadow-border">
@@ -95,6 +100,7 @@
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
+                <div class="main-content-block-time"><span>2012 May 3 12:00</span></div>
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
             <div class="main-content-block usual shadow-border last-in-row">
@@ -102,6 +108,7 @@
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
+                <div class="main-content-block-time"><span>2012 May 3 12:00</span></div>
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
             <div style="height:1px;overflow:hidden;clear:both;"></div>
