--- a/draft_05_calendar.html
+++ b/draft_05_calendar.html
@@ -38,26 +38,34 @@
                 <div><a href="/">Profile</a></div>
             </div>
             <div id="username" class="login">
-                <a ><img src="images/user-icon.png">Username</a>
+                <div><img src="images/user-icon.png"></div>
+                <div><a>Username</a></div>
             </div>
         </div>
     </div>
     <div class="content">
         <div class="content-header">
             <div class="content-header-active last"><a href="/">Страница события</a></div>
-            <div class="content-header-event last"><img src="images/event-logo.png"></div>
+            <div class="content-header-event last"><a href="/"><img src="images/event-logo.png"></a></div>
         </div>
         <div class="content-page draft-page">
             <div id="user-bar-left">
                 <div id="e-caption"><span>Street Art Utopia</span></div>
-                <img src="userimages/avatar01.png"
-                     class="avatar">
 
-                <div id="user-info-left">
-                    <span class="small-text">автор :</span><br>
-                    <span class="big-digit">3</span><br>
-                    <span class="small-text">участник :</span><br>
-                    <span class="big-digit">12</span><br>
+
+                <div id="user-info-left" class="grey shadow-border">
+                    <img src="userimages/avatar01.png"
+                         class="avatar">
+                    <div><a href="/" class="activity-user-link username-mid">Username</a></div>
+                    <div>
+                    <span class="big-digit">3&nbsp;</span>
+                        <span class="small-text author">автор</span>
+                    </div>
+                    <div>
+                        <span class="big-digit">12&nbsp;</span>
+                        <span class="small-text participant"> участник</span>
+                    </div>
+
                 </div>
                 <div class="filter-draft">
                     <span id="storedtime" hidden></span>
