--- a/draft_06_activity.html
+++ b/draft_06_activity.html
@@ -38,7 +38,8 @@
             <div><a href="/">Profile</a></div>
         </div>
         <div id="username" class="login">
-            <a ><img src="images/user-icon.png">Username</a>
+            <div><img src="images/user-icon.png"></div>
+            <div><a>Username</a></div>
         </div>
 
     </div>
@@ -46,7 +47,95 @@
 <div class="content">
 <div class="content-header">
     <div class="content-header-active last"><a href="/">что нового</a></div>
-    <div class="content-header-event last"><img src="images/event-logo.png"></div>
+    <div class="content-header-event last"><a href="/"><img src="images/event-logo.png"></a></div>
+</div>
+<div class="content-right-sidebar">
+    <div id="user-info-left" class="white user-info-right-sidebar shadow-border">
+        <img src="userimages/avatar01.png"
+             class="avatar">
+        <div><a href="/" class="activity-user-link username-mid">Username</a></div>
+        <div>
+            <span class="big-digit">3&nbsp;</span>
+            <span class="small-text author">автор</span>
+        </div>
+        <div>
+            <span class="big-digit">12&nbsp;</span>
+            <span class="small-text participant"> участник</span>
+        </div>
+
+    </div>
+    <div id="user-events"
+         class="shadow-border">
+        <div class="user-events-caption"><span>Еще события Username</span></div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0001.png">
+
+            <div class="user-event-title"><span>Fotography by Oliver</span></div>
+            <div class="user-event-time"><span>Today, 17:45</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0002.png">
+
+            <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
+            <div class="user-event-time"><span>Today, 22:32</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0003.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0001.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0001.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+
+    </div>
+    <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
+    <div id="user-all-events"
+         class="shadow-border">
+        <div class="user-events-caption"><span>События из каталога</span></div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0002.png">
+
+            <div class="user-event-title"><span>Fotography by Oliver</span></div>
+            <div class="user-event-time"><span>Today, 17:45</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0003.png">
+
+            <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
+            <div class="user-event-time"><span>Today, 22:32</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0001.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0002.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0002.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+
+    </div>
+    <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
 </div>
 <div class="content-page">
     <div class="wide">
@@ -101,7 +190,7 @@
                         <span>другие изменения:</span>
                     </div>
                     <div class="usual activity-event-changes">
-                        <span>всего 4 новых коментария</span><br>
+                        <span>всего 4  новых коментария</span><br>
                     </div>
                 </div>
                 <div class="hr usual"></div>
@@ -173,87 +262,14 @@
             </div>
             <div class="draft-events-show-more wide shadow-border"><span>More</span></div>
         </div>
-        <div style="height:1px;overflow:hidden;clear:both;">
-        </div>
+
     </div>
-    <div style="height:1px;overflow:hidden;clear:both;">
-    </div>
+
+
+    <div style="height:1px;overflow:hidden;clear:both;"></div>
 </div>
 
-<div class="content-right-sidebar">
-    <div id="user-bar"
-         class="shadow-border">
-        <img src="userimages/avatar01.png"
-             class="avatar">
 
-        <div id="user-info">
-            <div class="user-name"><span>Username</span></div>
-            <div class="user-activity"><span>Автор / Учасник</span></div>
-            <div class="user-actprogress"></div>
-            <div class="user-actcount"><span>3/12</span></div>
-        </div>
-    </div>
-    <div id="user-events"
-         class="shadow-border">
-        <div class="user-events-caption"><span>Еще события Username</span></div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0001.png">
-
-            <div class="user-event-title"><span>Fotography by Oliver</span></div>
-            <div class="user-event-time"><span>Today, 17:45</span></div>
-        </div>
-        <div class="user-event-item">
-            <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
-
-            <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
-            <div class="user-event-time"><span>Today, 22:32</span></div>
-        </div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0003.png">
-
-            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
-            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
-        </div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0001.png">
-
-            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
-            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
-        </div>
-
-    </div>
-    <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
-    <div id="user-all-events"
-         class="shadow-border">
-        <div class="user-events-caption"><span>События из каталога</span></div>
-        <div class="user-event-item">
-            <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
-
-            <div class="user-event-title"><span>Fotography by Oliver</span></div>
-            <div class="user-event-time"><span>Today, 17:45</span></div>
-        </div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0003.png">
-
-            <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
-            <div class="user-event-time"><span>Today, 22:32</span></div>
-        </div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0001.png">
-
-            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
-            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
-        </div>
-        <div class="user-event-item">
-            <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
-
-            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
-            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
-        </div>
-
-    </div>
-    <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
-</div>
 <div id="logged-menu" class="slide-menu user-menu">
 
     <div class="">
@@ -264,7 +280,9 @@
     </div>
 
 </div>
+
 </div>
+
 <div class="footer">
     <div class="footer-menu">
         <span>About</span>
