--- a/event_create.html
+++ b/event_create.html
@@ -37,7 +37,8 @@
             <div><a href="/">Profile</a></div>
         </div>
         <div id="username" class="login">
-            <a ><img src="images/user-icon.png">Username</a>
+            <div><img src="images/user-icon.png"></div>
+            <div><a>Username</a></div>
         </div>
 
     </div>
@@ -45,7 +46,7 @@
 <div class="content">
     <div class="content-header">
         <div class="content-header-active last"><a href="/">Страница события</a></div>
-        <div class="content-header-event last"><img src="images/event-logo.png"></div>
+        <div class="content-header-event last"><a href="/"><img src="images/event-logo.png"></a></div>
     </div>
     <div class="content-page">
         <div id="e-caption"><input name="ecaption"
