--- a/event_iew_owner.html
+++ b/event_iew_owner.html
@@ -37,7 +37,8 @@
             <div><a href="/">Profile</a></div>
         </div>
         <div id="username" class="login">
-            <a ><img src="images/user-icon.png">Username</a>
+            <div><img src="images/user-icon.png"></div>
+            <div><a>Username</a></div>
         </div>
 
     </div>
@@ -45,7 +46,96 @@
 <div class="content">
 <div class="content-header">
     <div class="content-header-active last"><a href="/">Страница события</a></div>
-    <div class="content-header-event last"><img src="images/event-logo.png"></div>
+    <div class="content-header-event last"><a href="/"><img src="images/event-logo.png"></a></div>
+</div>
+<div class="content-right-sidebar">
+    <div id="user-info-left" class="white center-text  user-info-right-sidebar shadow-border">
+        <img src="userimages/avatar01.png"
+             class="avatar">
+        <div><a href="/" class="activity-user-link username-mid">Username</a></div>
+        <div>
+            <span class="">Активных событий</span>
+
+        </div>
+        <div>
+            <a href="" class=" big-digit active-events">5</a>
+
+        </div>
+
+    </div>
+    <div id="user-events"
+         class="shadow-border">
+        <div class="user-events-caption"><span>Еще события Username</span></div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0001.png">
+
+            <div class="user-event-title"><span>Fotography by Oliver</span></div>
+            <div class="user-event-time"><span>Today, 17:45</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0002.png">
+
+            <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
+            <div class="user-event-time"><span>Today, 22:32</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0003.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0001.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0001.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+
+    </div>
+    <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
+    <div id="user-all-events"
+         class="shadow-border">
+        <div class="user-events-caption"><span>События из каталога</span></div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0002.png">
+
+            <div class="user-event-title"><span>Fotography by Oliver</span></div>
+            <div class="user-event-time"><span>Today, 17:45</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0003.png">
+
+            <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
+            <div class="user-event-time"><span>Today, 22:32</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0001.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0002.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+        <div class="user-event-item">
+            <img src="userimages/event-small0002.png">
+
+            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+        </div>
+
+    </div>
+    <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
+
 </div>
 <div class="content-page">
     <div id="e-caption">
@@ -58,13 +148,25 @@
             <img src="userimages/event0001.png">
         </div>
         <div class="usual event-owner-selects-wrapper">
-            <div class="usual">
-                <span> мой статус: </span>
-                <span class="event-owner-select"> иду </span>
+            <div class="usual"> <nobr>
+                <span> мой статус:</span>
+                <select class="event-owner-select"  name="go">
+
+                    <option value="Иду">Иду</option>
+                    <option selected value="Не иду">Не иду</option>
+                    <option value="Не знаю">Не знаю</option>
+
+                </select> </nobr>
             </div>
-            <div class="usual">
-                <span> напомнить: </span>
-                <span class="event-owner-select"> 3 дня </span>
+            <div class="usual"> <nobr>
+                <span>напомнить:</span>
+                <select class="event-owner-select"  name="time">
+
+                    <option value="Иду">3 дня</option>
+                    <option selected value="Не иду">5 дней</option>
+                    <option value="Не знаю">7 дней</option>
+
+                </select> </nobr>
             </div>
 
         </div>
@@ -86,7 +188,7 @@
             <img src="images/people-icon.png"><span>4 идут/8 не определились</span>
         </div>
     </div>
-    <div id="e-text">
+    <div id="e-text" class="usual">
                   <span>Breaking Bad («Во все тяжкие»), возможно, уже и не жилец в
                   этом телевизионном мире, однако у драмы AMC, по мере приближения к финалу,продолжает расти аудитория.
 
@@ -230,81 +332,7 @@
     </div>
 </div>
 
-<div class="content-right-sidebar">
-    <div id="user-bar"
-         class="shadow-border">
-        <img src="userimages/avatar01.png"
-             class="avatar">
 
-        <div id="user-info">
-            <div class="user-name"><span>Username</span></div>
-            <div class="user-activity"><span>Активных событий</span></div>
-            <div class="user-actprogress"></div>
-            <div class="user-actcount"><span>5</span></div>
-        </div>
-    </div>
-    <div id="user-events"
-         class="shadow-border">
-        <div class="user-events-caption"><span>Еще события Username</span></div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0001.png">
-
-            <div class="user-event-title"><span>Fotography by Oliver</span></div>
-            <div class="user-event-time"><span>Today, 17:45</span></div>
-        </div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0002.png">
-
-            <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
-            <div class="user-event-time"><span>Today, 22:32</span></div>
-        </div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0003.png">
-
-            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
-            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
-        </div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0001.png">
-
-            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
-            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
-        </div>
-
-    </div>
-    <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
-    <div id="user-all-events"
-         class="shadow-border">
-        <div class="user-events-caption"><span>События из каталога</span></div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0002.png">
-
-            <div class="user-event-title"><span>Fotography by Oliver</span></div>
-            <div class="user-event-time"><span>Today, 17:45</span></div>
-        </div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0003.png">
-
-            <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
-            <div class="user-event-time"><span>Today, 22:32</span></div>
-        </div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0001.png">
-
-            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
-            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
-        </div>
-        <div class="user-event-item">
-            <img src="userimages/event-small0002.png">
-
-            <div class="user-event-title"><span>Stephen Baretss photo</span></div>
-            <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
-        </div>
-
-    </div>
-    <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
-
-</div>
 <div id="logged-menu" class="slide-menu user-menu">
 
     <div class="">
