--- a/profile.html
+++ b/profile.html
@@ -37,7 +37,8 @@
                 <div><a href="/">Profile</a></div>
             </div>
             <div id="username" class="login">
-                <a ><img src="images/user-icon.png">Username</a>
+                <div><img src="images/user-icon.png"></div>
+                <div><a>Username</a></div>
             </div>
 
         </div>
@@ -45,7 +46,46 @@
     <div class="content">
         <div class="content-header">
             <div class="content-header-active last"><a href="/">Страница события</a></div>
-            <div class="content-header-event last"><img src="images/event-logo.png"></div>
+            <div class="content-header-event last"><a href="/"><img src="images/event-logo.png"></a></div>
+        </div>
+        <div class="content-right-sidebar">
+
+            <div id="user-all-events"
+                 class="shadow-border">
+                <div class="user-events-caption"><span>События из каталога</span></div>
+                <div class="user-event-item">
+                    <img src="userimages/event-small0002.png">
+
+                    <div class="user-event-title"><span>Fotography by Oliver</span></div>
+                    <div class="user-event-time"><span>Today, 17:45</span></div>
+                </div>
+                <div class="user-event-item">
+                    <img src="userimages/event-small0003.png">
+
+                    <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
+                    <div class="user-event-time"><span>Today, 22:32</span></div>
+                </div>
+                <div class="user-event-item">
+                    <img src="userimages/event-small0001.png">
+
+                    <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+                    <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+                </div>
+                <div class="user-event-item">
+                    <img src="userimages/event-small0002.png">
+
+                    <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+                    <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+                </div>
+                <div class="user-event-item">
+                    <img src="userimages/event-small0002.png">
+
+                    <div class="user-event-title"><span>Stephen Baretss photo</span></div>
+                    <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
+                </div>
+
+            </div>
+            <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
         </div>
         <div class="content-page">
             <div id="e-caption">
@@ -59,14 +99,18 @@
                 <div class="usual profile-main-data">
                     <div class="usual profile-main-count">
                         <div class="usual first-event-counter">
-                            <span>12</span>
-                            <sup>автор</sup>
+                            <nobr>
+                            <span>12&nbsp;</span>
+                            <span class="small-text author">автор</span>
+                            </nobr>
                         </div>
                         <div class="usual second-event-counter">
-                            <span>12</span>
-                            <sup>автор</sup>
+                            <nobr>
+                            <span >12&nbsp;</span>
+                            <span class="small-text participant">учасник</span>
+                            </nobr>
                         </div>
-                        <div class="usual profile-main-more">
+                        <div class="usual profile-main-more shadow-border">
                             <span>More</span>
                         </div>
                     </div>
@@ -128,39 +172,7 @@
             </div>
         </div>
 
-        <div class="content-right-sidebar">
 
-            <div id="user-all-events"
-                 class="shadow-border">
-                <div class="user-events-caption"><span>События из каталога</span></div>
-                <div class="user-event-item">
-                    <img src="userimages/event-small0002.png">
-
-                    <div class="user-event-title"><span>Fotography by Oliver</span></div>
-                    <div class="user-event-time"><span>Today, 17:45</span></div>
-                </div>
-                <div class="user-event-item">
-                    <img src="userimages/event-small0003.png">
-
-                    <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
-                    <div class="user-event-time"><span>Today, 22:32</span></div>
-                </div>
-                <div class="user-event-item">
-                    <img src="userimages/event-small0001.png">
-
-                    <div class="user-event-title"><span>Stephen Baretss photo</span></div>
-                    <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
-                </div>
-                <div class="user-event-item">
-                    <img src="userimages/event-small0002.png">
-
-                    <div class="user-event-title"><span>Stephen Baretss photo</span></div>
-                    <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
-                </div>
-
-            </div>
-            <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
-        </div>
         <div id="logged-menu" class="slide-menu user-menu">
 
             <div class="">
