--- a/draft_01_main_chosed.html
+++ b/draft_01_main_chosed.html
@@ -48,8 +48,8 @@
             <div class="usual site-slogan-signature"><span>...or explore public events</span></div>
         </div>
         <div class="content-header">
-            <div class="content-header-active"><a href="/">All</a></div>
-            <div ><a href="/">Business</a></div>
+            <div ><a href="/">All</a></div>
+            <div class="content-header-active"><a href="/">Business</a></div>
             <div><a href="/">Entertainment</a></div>
             <div class="last"><a href="/">Special Offers</a></div>
             <div class="content-header-event last">
@@ -69,9 +69,10 @@
                 <span class="event-end-time"   hidden>1345144005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
-                <div class="event-cat special-offers"><span>Special Offers</span></div>
-            </div></a>
-
+                <div class="event-tags main-event-tags"><img src="images/filtertags.png">
+                    <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
+                </div>
+            </div> </a>
                 <a class="empty-a" href="/">
             <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png">
@@ -79,32 +80,35 @@
                 <span class="event-end-time" hidden>2347144005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
-
-                <div class="event-cat entertainment"><span>Entertainment</span></div>
-            </div> </a>
+                <div class="event-tags main-event-tags"><img src="images/filtertags.png">
+                    <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
+                </div>
+            </div></a>
                 </div>
             <div class="page-col3 main-page-col3 usual">
                 <a class="empty-a" href="/">
-                <div class="event-tab main-page-tab shadow-border">
+            <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1342144005</span>
                 <span class="event-end-time" hidden>1348144005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
-
-                <div class="event-cat special-offers"><span>Special Offers</span></div>
-
+                <div class="event-tags main-event-tags"><img src="images/filtertags.png">
+                    <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
+                </div>
             </div> </a>
-            <a class="empty-a" href="/"><div class="event-tab main-page-tab shadow-border">
+                <a class="empty-a" href="/">
+            <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png"><span class="event-start-time" hidden>1345144005</span>
                 <span class="event-end-time" hidden>2345944005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
-
-                <div class="event-cat business"><span>Business</span></div>
-            </div></a>
+                <div class="event-tags main-event-tags"><img src="images/filtertags.png">
+                    <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
                 </div>
-            <div class="page-col3 main-page-col3 usual  last-in-row">
+            </div> </a>
+                </div>
+            <div class="page-col3 main-page-col3 usual last-in-row">
                 <a class="empty-a" href="/">
             <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png">
@@ -112,9 +116,10 @@
                 <span class="event-end-time" hidden>2349144005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
-
-                <div class="event-cat business"><span>Business</span></div>
-            </div></a>
+                <div class="event-tags main-event-tags"><img src="images/filtertags.png">
+                    <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
+                </div>
+            </div> </a>
                 <a class="empty-a" href="/">
             <div class="event-tab main-page-tab shadow-border ">
                 <img src="images/food.png">
@@ -122,13 +127,14 @@
                 <span class="event-end-time" hidden>1345144005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
-
-                <div class="event-cat entertainment"><span>Entertainment</span></div>
-            </div> </a>
+                <div class="event-tags main-event-tags"><img src="images/filtertags.png">
+                    <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
+                </div>
+            </div>   </a>
                 </div>
             <div style="height:1px;overflow:hidden;clear:both;"></div>
             <div class="main-content-popular-tags">
-                <b>Popular tags:</b>&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>
+<b>Popular tags:</b>&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>
                 <a class="more-tags" href="">more tags...</a>
             </div>
 
