--- a/event_iew_owner.html
+++ b/event_iew_owner.html
@@ -143,33 +143,12 @@
 
         <div class="event-edit-button"><a href="">редактировать</a></div>
     </div>
+    <div class="events-wrp">
     <div class="event-more-b1">
         <div id="e-image">
             <img src="userimages/event0001.png">
         </div>
-        <div class="usual event-owner-selects-wrapper">
-            <div class="usual"> <nobr>
-                <span> мой статус:</span>
-                <select class="event-owner-select"  name="go">
 
-                    <option value="Иду">Иду</option>
-                    <option selected value="Не иду">Не иду</option>
-                    <option value="Не знаю">Не знаю</option>
-
-                </select> </nobr>
-            </div>
-            <div class="usual"> <nobr>
-                <span>напомнить:</span>
-                <select class="event-owner-select"  name="time">
-
-                    <option value="Иду">3 дня</option>
-                    <option selected value="Не иду">5 дней</option>
-                    <option value="Не знаю">7 дней</option>
-
-                </select> </nobr>
-            </div>
-
-        </div>
     </div>
     <div class="event-more-b2">
         <div id="e-date">
@@ -187,6 +166,38 @@
         <div class="e-people">
             <img src="images/people-icon.png"><span>4 идут/8 не определились</span>
         </div>
+        <div class="event-invite">
+            <a id="invite"><sup>+</sup>пригласить</a>
+            <span>|</span>
+            <a id="inspect">смотреть</a>
+        </div>
+    </div>
+
+    </div>
+    <div class=" event-owner-selects-wrapper">
+        <div class="owner-select usual"> <nobr>
+            <span> мой статус:</span>
+            <select class="event-owner-select"  name="go">
+
+                <option value="Иду">Иду</option>
+                <option selected value="Не иду">Не иду</option>
+                <option value="Не знаю">Не знаю</option>
+
+            </select> </nobr>
+            <img class="arrow" src="images/list-black-arrow.png">
+        </div>
+        <div class="owner-select usual"> <nobr>
+            <span>напомнить:</span>
+            <select class="event-owner-select"  name="time">
+                <option value="Иду">3 дня</option>
+                <option selected value="Не иду">5 дней</option>
+                <option value="Не знаю">7 дней</option>
+            </select>
+
+        </nobr>
+            <img class="arrow" src="images/list-black-arrow.png">
+        </div>
+
     </div>
     <div id="e-text" class="usual">
                   <span>Breaking Bad («Во все тяжкие»), возможно, уже и не жилец в
