--- a/maket_choosen.html
+++ b/maket_choosen.html
@@ -43,9 +43,9 @@
 </div>
 <div class="content">
     <div class="content-header">
-        <div class="content-header-active"><a href="/">All</a></div>
+        <div ><a href="/">All</a></div>
         <div><a href="/">Business</a></div>
-        <div><a href="/">Entertainment</a></div>
+        <div class="content-header-active"><a href="/">Entertainment</a></div>
         <div class="last"><a href="/">Special Offers</a></div>
         <div class="content-header-event last"><a href="/"><img src="images/event-logo.png"></a></div>
     </div>
@@ -117,9 +117,7 @@
                 <div class="event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>
                 </div>
-                <a class="empty-a hilited" href="/">
-                    <div class="event-cat special-offers"><span>Special Offers</span></div>
-                </a>
+
             </div>
             <div class="event-tab shadow-border">
                 <a class="empty-a hilited" href="/"><img src="images/food.png">
@@ -136,9 +134,7 @@
                 <div class="event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>
                 </div>
-                <a class="empty-a hilited" href="/">
-                    <div class="event-cat entertainment"><span>Entertainment</span></div>
-                </a>
+
             </div>
         </div>
         <div class="page-col3 usual">
@@ -158,9 +154,7 @@
                 <div class="event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>
                 </div>
-                <a class="empty-a hilited" href="/">
-                    <div class="event-cat special-offers"><span>Special Offers</span></div>
-                </a>
+
             </div>
 
             <div class="event-tab shadow-border">
@@ -178,9 +172,7 @@
                 <div class="event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>
                 </div>
-                <a class="empty-a hilited" href="/">
-                    <div class="event-cat business"><span>Business</span></div>
-                </a>
+
             </div>
         </div>
         <div class="page-col3 usual  last-in-row">
@@ -199,9 +191,7 @@
                 <div class="event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>
                 </div>
-                <a class="empty-a hilited" href="/">
-                    <div class="event-cat business"><span>Business</span></div>
-                </a>
+
             </div>
             <div class="event-tab shadow-border">
                 <a class="empty-a hilited" href="/"><img src="images/food.png">
@@ -218,9 +208,7 @@
                 <div class="event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>,&nbsp;<a href="">pizza</a>
                 </div>
-                <a class="empty-a hilited" href="/">
-                    <div class="event-cat entertainment"><span>Entertainment</span></div>
-                </a>
+
             </div>
         </div>
         <div class="draft-events-show-more full-wide shadow-border "><span>MORE</span>
